api/complex-istio/ingress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: api-ingress-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend 
spec:
  hosts:
  - "*"
  gateways:
  - api-ingress-gateway
  http:
  - match:
    - uri:
        exact: /datetime
    - uri:
        exact: /
    - uri:
        exact: /health
    - uri:
        exact: /health/toggle
    route:
    - destination:
        host: frontend
        port:
          number: 80
