api/complex-istio/routing-simple.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: middleware
spec:
  hosts:
  - middleware
  http:
  - match:
    - uri:
        exact: /datetime
    - uri:
        exact: /
    route:
    - destination:
        host: middleware
        subset: prod
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend
spec:
  hosts:
  - backend
  http:
  - match:
    - uri:
        exact: /datetime
    - uri:
        exact: /
    route:
    - destination:
        host: backend
        subset: prod
---
